--- a/ProjectImports/App.config
+++ b/ProjectImports/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-		<add key="DynamicsApi" value="https://dai.api.crm.dynamics.com" />
+		<add key="DynamicsApi" value="https://daidev.api.crm.dynamics.com" />
 	</appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
